# rust-os

./: Cargo.toml  README.md  c  x86_64-blog_os.json  xb  xbuild
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
